Refatoração do fluxo de envio de emails